--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <p>hi</p>
+    <!--selectors-->
+    <!--group selctor-->
+    <h1>hiii</h1>
+    <h2>hello</h2>
+    <h3>welcome</h3>
+    <!--child selector-->
+    <div class="grandpa">
+        <div class="father">
+            <div class="son">son</div>
+        </div>
+        <div class="father2">
+            <div class="son">son</div>
+        </div>
+        <!--discendent selector-->
+        <div class="naruto">
+        <div class="narutoa">
+            <div class="narutob">
+
+                <div class="narutoc">hi dude</div>
+            </div>
+            <div class="narutoc">welcome</div>
+        </div>
+    </div>
+    <!--chaining selector-->
+    <div class="sasuke" id="hi">sasuke</div>
+        
+    
 </body>
 </html>
